# probability-and-computing-exercises

./: LICENSE  README.md  pyproject.toml
chapter01/: exercise01.ipynb  exercise10.ipynb
chapter02/: exercise01.ipynb  exercise04.ipynb  exercise06.ipynb  exercise12.ipynb  exercise24.ipynb
chapter03/: exercise01.ipynb  exercise02.ipynb  exercise05.ipynb  exercise06.ipynb
