[tool.poetry]
name = "probability-and-computing-exercises"
version = "0.1.0"
description = ""
authors = ["soeren berg <soeren.berg@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.1"
matplotlib = "^3.3.4"
seaborn = "^0.11.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
yapf = "^0.30.0"
neovim = "^0.3.1"
mypy = "^0.800"
pylint = "^2.6.0"
flake8 = "^3.8.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
